# nefelibata

./: .coveragerc  .gitignore  .hgignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  Makefile  README.rst  TODO.md  TODO.mkd  buildout.cfg  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  configuration.rst  customization.rst  development.rst  getting_started.rst  index.rst  usage.rst
scripts/: migrate_timestamps.py
src/nefelibata/: __init__.py  announcer.py  config.py  console.py  constants.py  enclosure.py  index.py  post.py  publisher.py  skeleton.py  typing.py  utils.py
src/nefelibata/announcers/: __init__.py  antenna.py  archive_blog.py  base.py  capcom.py  facebook.py  fawm.py  fiftyninety.py  geminispace.py  gemlog.py  mastodon.py  medium.py  twitter.py  webmention.py  wtsocial.py
src/nefelibata/assistants/: __init__.py  archive_links.py  base.py  current_weather.py  exif_description.py  mirror_images.py  news.py  playlist.py  reading_time.py  relativize_links.py  rsvp_calendar.py  twitter_card.py  warn_external_resources.py
src/nefelibata/builders/: __init__.py  atom.py  base.py  categories.py  feed.py  gemini.py  html.py  index.py  playlist.py  post.py  search.py  tags.py  twitter_card.py  utils.py
src/nefelibata/cli/: build.py  init.py  new.py  preview.py  publish.py
src/nefelibata/publishers/: __init__.py  base.py  command.py  ftp.py  ipfs.py  neocities.py  s3.py
src/nefelibata/skeleton/: nefelibata.yaml
src/nefelibata/skeleton/posts/first/: first_post.md  index.md  index.mkd
src/nefelibata/skeleton/templates/: atom.xml  base.html  boilerplate.html  bootstrap.html  index.html  post.html  template.html
src/nefelibata/skeleton/templates/css/: master.css  nefelibata.css
src/nefelibata/skeleton/templates/default/: base.html  index.html  post.html
src/nefelibata/skeleton/templates/default/css/: master.css
src/nefelibata/skeleton/templates/pure-blog/: base.html  index.html  post.html
src/nefelibata/skeleton/templates/pure-blog/css/layouts/: blog.css
src/nefelibata/skeleton/templates/pure-blog/js/: hide_archived_links.js
src/nefelibata/templates/builders/gemini/: feed.gmi  group.gmi  index.gmi  like.gmi  post.gmi  rsvp.gmi  short.gmi  song.gmi  tag.gmi
src/nefelibata/templates/builders/html/default/: package-lock.json  package.json  tailwind.config.js
src/nefelibata/templates/builders/html/default/src/: atom.xml  base.html  group.html  index.html  post.html  short.html
src/nefelibata/templates/builders/html/default/src/css/: style.css
src/nefelibata/templates/builders/html/minimal/src/: atom.xml  base.html  group.html  index.html  like.html  post.html  rsvp.html  short.html
src/nefelibata/templates/builders/html/minimal/src/css/: awsm_theme_big-stone.min.css  awsm_theme_pearl-lusta.min.css  custom.css
src/nefelibata/templates/skeleton/: nefelibata.yaml
src/nefelibata/templates/skeleton/posts/first/: index.mkd
tests/: conftest.py  console_test.py  enclosure_test.py  test_console.py  test_enclosure.py  test_post.py  test_skeleton.py  test_utils.py
tests/announcers/: archive_blog_test.py  capcom_test.py  fawm.html  fiftyninety.html  geminispace_test.py  mastodon_test.py  test_announcer.py  test_antenna.py  test_base.py  test_capcom.py  test_fawm.py  test_fiftyninety.py  test_geminispace.py  test_mastodon.py  test_medium.py  test_twitter.py  test_webmention.py  test_wtsocial.py
tests/assistants/: exif_description_test.py  test_archive_links.py  test_assistant.py  test_base.py  test_current_weather.py  test_mirror_images.py  test_news.py  test_playlist.py  test_reading_time.py  test_relativize_links.py  test_rsvp_calendar.py  test_twitter_card.py  test_warn_exnternal_resources.py  test_warn_external_resources.py
tests/builders/: gemini_test.py  test_atom.py  test_base.py  test_builder.py  test_categories.py  test_feed.py  test_gemini.py  test_html.py  test_index.py  test_playlist.py  test_post.py  test_tags.py  test_utils.py
tests/cli/: build_test.py  new_test.py  test_build.py  test_init.py  test_new.py  test_preview.py  test_publish.py
tests/fakes/: __init__.py
tests/publishers/: command_test.py  ftp_test.py  s3_test.py  test_base.py  test_command.py  test_ftp.py  test_ipfs.py  test_neocities.py  test_publisher.py  test_s3.py
